dark mode fixes settings + resultpanel

--- a/frontend/src/components/FilterCard/FilterCard.css
+++ b/frontend/src/components/FilterCard/FilterCard.css
@@ -36,18 +36,18 @@
 }
 
 /* Add this to your CSS files */
-._settings-card .modal-dialog,
+
 ._filter_card .modal-dialog {
   height: auto;
 }
 
-._settings-card .modal-content,
+
 ._filter_card .modal-content {
   height: auto;
   overflow: visible;
 }
 
-._settings-card .modal-body,
+
 ._filter_card .modal-body {
   overflow: visible;
   max-height: none;
