--- a/frontend/src/components/ResultsPanel/ResultsPanel.css
+++ b/frontend/src/components/ResultsPanel/ResultsPanel.css
@@ -106,6 +106,16 @@
   color: var(--text-color);
 }
 
+[theme="dark"] .results-table tbody tr:nth-child(even):hover {
+  background-color: var(--secondary-color);
+  transform: translateY(-1px);
+}
+
+[theme="dark"] .results-table tbody tr:nth-child(odd):hover {
+  background-color: color-mix(in srgb, var(--bg-color), white 25%);
+  transform: translateY(-1px);
+}
+
 .results-table tbody tr:hover {
   background-color: rgba(225, 235, 245, 0.7);
   transform: translateY(-1px);
@@ -196,7 +206,7 @@
 
 .corpus-group {
   margin-bottom: 1rem;
-  border: 1px solid #e0e0e0;
+  border: 1px solid color-mix(in srgb, var(--resultpanel-bg-color), black 20%);
   border-radius: 4px;
   overflow: hidden;
 }
@@ -215,7 +225,7 @@
 }
 
 .corpus-name {
-  margin-left: 0.5rem;
+  margin-left: var(--secondary-color);
 }
 
 .corpus-count {
