--- a/frontend/src/components/SettingsCard/SettingsCard.css
+++ b/frontend/src/components/SettingsCard/SettingsCard.css
@@ -1,19 +1,11 @@
-.settings-overlay {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.2);
-}
 
+.inst{
+    color: var(--text-color);
+}
 .settings-card {
     width: 50%;
     align-items: center;
-    background: #f8f9fa;
+    background: var(--bg-color);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
@@ -28,11 +20,12 @@
     justify-content: space-around;
     gap: 10px;
     padding:10px;
+    color: var(--text-color);
 }
 
 .settings button {
-    background-color: #f0f0f0;
-    border: 2px solid #ccc;
+    background-color: var(--bg-color);
+    border: 2px solid var(--secondary-color);
     border-radius: 50%;  
     padding: 10px;
     width: 50px; 
@@ -47,34 +40,65 @@
 }
 
 .settings button[active="true"] {
-    background-color: #007bff; 
-    color: white;
-    border-color: #007bff;
+    background-color: var(--primary-color); 
+    color: var(--bg-color);
+    border-color: var(--primary-color);
 }
 
 .settings button:hover {
-    background-color: #007bff;
+    background-color: color-mix(in srgb, var(--primary-color), red 15%);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .settingsFooter{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: var(--bg-color);
 }
+
+.settingClose{
+    width: 30%;
+    justify-content: center;
+    background-color: var(--primary-color);
+    border: var(--primary-color);
+}
+
+.settingClose:hover {
+    background-color: color-mix(in srgb, var(--primary-color), red 20%);
+    border: var(--primary-color);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+
 
 .settingsCloseButton {
     width: 100%;
 }
 
 .light-mode-button {
-    color: #f39c12;
+    color: var(--primary-color);
 }
 
 .dark-mode-button {
-    color: #2c3e50; 
+    color: var(--secondary-color); 
 }
 
 .settings__description {
     font-size: 0.8rem;
-    color: gray;
+    color: var(--text-color);
+}
+/* Add this to your CSS files */
+._settings-card .modal-dialog {
+  height: auto;
+}
+
+._settings-card .modal-content{
+  height: auto;
+  overflow: visible;
+}
+
+._settings-card .modal-body{
+  overflow: visible;
+  max-height: none;
 }
